# noir_flutter

./: CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
cargokit/build_tool/lib/src/: android_environment.dart  barretenberg_android.dart
cargokit/gradle/: plugin.gradle
example/: .gitignore  README.md  log.txt  pubspec.yaml
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/gradle/wrapper/: gradle-wrapper.properties
example/integration_test/: plugin_integration_test.dart
example/ios/: Podfile
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: circom_test.dart
ios/: mopro_flutter_bindings.podspec  noir_flutter.podspec
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt
macos/: mopro_flutter_bindings.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
windows/: CMakeLists.txt
