[dependencies]
flutter_rust_bridge = "=2.11.1"

[dependencies.mopro-example-app-noir]
default-features = false
features = ["flutter"]
git = "https://github.com/zkmopro/mopro-example-app-noir"
version = "0.1.0"

[lib]
crate-type = [
    "cdylib",
    "staticlib",
]

[lints.rust.unexpected_cfgs]
check-cfg = ["cfg(frb_expand)"]
level = "warn"

[package]
edition = "2021"
name = "noir_flutter"
version = "0.1.0"

[workspace]
